<resources>
    <string name="app_name" translatable="false">BiKeTrack</string>

    <!--  Data formats  -->
    <string name="time_format" translatable="false">%1$02d:%2$02d:%3$02d</string>
    <string name="speed_format" translatable="false">%1$.1f Km/h</string>
    <string name="altitude_format" translatable="false">%1$.1f m</string>
    <string name="distance_format" translatable="false">%1$.1f Km</string>
    <string name="date_format" translatable="false">%1$s, %2$s</string>
    <string name="length_format" translatable="false">%1$.1f h</string>
    <string name="watts_format" translatable="false">%1$d W</string>
    <string name="kcal_format" translatable="false">%1$d Kcal</string>
    <string name="graph_format" translatable="false">%1$.1f</string>

    <!--  Default track names  -->
    <string name="morning_track">Morning track</string>
    <string name="afternoon_track">Afternoon track</string>
    <string name="evening_track">Evening track</string>
    <string name="night_track">Night track</string>

    <!--  TracksListActivity strings  -->
    <string name="track_open">Open</string>

    <!--  RecordActivity strings  -->
    <string name="record_track">Record track</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="recording_started">Recording started</string>
    <string name="recording_saved">Recording saved</string>
    <string name="graph_altitude">Altitude (m)</string>
    <string name="graph_speed">Speed (Km/h)</string>

    <!--  TrackDetailActivity strings  -->
    <string name="detail_altitude">Altitude: %1$.1f m</string>
    <string name="detail_speed">Speed: %1$.1f Km/h</string>
    <string name="detail_delete">Delete</string>

    <!--  SettingsActivity strings  -->
    <string name="settings">Settings</string>
    <string name="your_info_header">Your Info</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="weekly_objectives">Your weekly objectives</string>
    <string name="weekly_enable">Enable weekly objectives</string>
    <string name="weekly_calories">Calories burned</string>
    <string name="weekly_hours">Hours of training</string>
    <string name="data_gathering">Data gathering</string>
    <string name="recording_resolution">Recording resolution (points per second)</string>
    <string name="keep_awake">Device awake during recording</string>
    <string name="setting_height" translatable="false">height</string>
    <string name="setting_weight" translatable="false">weight</string>
    <string name="setting_enable_weekly" translatable="false">weekly_enable</string>
    <string name="setting_weekly_calories" translatable="false">weekly_calories</string>
    <string name="setting_weekly_hours" translatable="false">weekly_hours</string>
    <string name="setting_resolution" translatable="false">recording_resolution</string>
    <string name="setting_awake" translatable="false">keep_awake</string>

    <!--  LoginActivity strings  -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign up or sign in</string>
    <string name="welcome_message">Welcome to BiKeTrack!
        \n\nPlease enter your email and your password to log in or register.
        \n\nA valid password consist of a minimum of 5 characters.
    </string>
    <string name="login_failed">Login failed!</string>

    <!--  ChooseNicknameActivity strings  -->
    <string name="prompt_nickname">Nickname</string>
    <string name="action_next">Next</string>

    <!--  TrackDetailCard strings  -->
    <string name="avg_speed">Average speed</string>
    <string name="avg_watts">Average watts</string>
    <string name="min_altitude">Minimum altitude</string>
    <string name="max_altitude">Maximum altitude</string>
    <string name="elevation_gain">Elevation gain</string>
    <string name="calories_burned">Calories burned</string>

    <!--  WelcomeCard strings  -->
    <string name="welcome_format">Welcome, %1$s!</string>
    <string name="welcome_anonymous">Welcome, please login to use the app</string>
    <string name="welcome_weekly_format" translatable="false">%1$.1f/%2$.1f</string>

    <!--  RemoveTrackDialog strings  -->
    <string name="dialog_text">Are you sure you want to delete this track?</string>
    <string name="dialog_confirm">Yes</string>
    <string name="dialog_deny">No</string>

    <!--  Misc strings  -->
    <string name="time">Time</string>
    <string name="speed">Speed</string>
    <string name="altitude">Altitude</string>
    <string name="distance">Distance</string>
    <string name="logout">Logout</string>
</resources>