<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/your_info_header">
        <com.romagmir.biketrack.ui.NumberPickerPreference
            app:key="height"
            app:title="@string/height"
            app:min_value="1"
            app:max_value="300"
            app:suffix="cm"
            app:initial_value="180"
            app:useSimpleSummaryProvider="true"/>

        <com.romagmir.biketrack.ui.NumberPickerPreference
            app:key="weight"
            app:title="@string/weight"
            app:min_value="1"
            app:max_value="400"
            app:suffix="Kg"
            app:initial_value="80"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/data_gathering">
        <SeekBarPreference
            app:key="recording_resolution"
            android:max="10"
            app:min="1"
            app:defaultValue="6"
            app:title="@string/recording_resolution"
            app:showSeekBarValue="true" />
    </PreferenceCategory>

</PreferenceScreen>